--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,6 @@
 apply plugin: 'scala'
 
 repositories {
-    mavenCentral()
-}
-
-repositories {
     mavenLocal()
     mavenCentral()
     jcenter()
@@ -13,11 +9,14 @@ repositories {
 
 dependencies {
     compile 'org.scala-lang:scala-library:2.11.6'
-    compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.2.0'
-    compile group: 'org.apache.spark', name: 'spark-sql_2.11', version: '2.2.0'
-    compile group: 'org.apache.spark', name: 'spark-mllib_2.11', version: '2.2.0'
-    compile group: 'com.marklogic', name: 'marklogic-client-api', version: '4.0.3.1'
-    testCompile group: 'org.scalatest', name: 'scalatest_2.10', version: '3.2.0-SNAP10'
+    compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.3.0'
+    compile group: 'org.apache.spark', name: 'spark-sql_2.11', version: '2.3.0'
+    compile group: 'org.apache.spark', name: 'spark-mllib_2.11', version: '2.3.0'
+    compile (group: 'com.marklogic', name: 'marklogic-client-api', version: '4.0.3.1') {
+        exclude group:"com.fasterxml.jackson.core"
+    }
+    testCompile group: 'org.scalatest', name: 'scalatest_2.11', version: '3.2.0-SNAP10'
+    testCompile group: 'org.scalacheck', name: 'scalacheck_2.10', version: '1.13.5'
 }
 
 task wrapper(type: Wrapper) {
